set max-width to avoid overflow in mobile landscape

--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -56,7 +56,7 @@
         translate: 0 -50%;
         /* override the .content min-width */
         min-width: 0;
-        width: 35em;
+        max-width: 35em;
     }
 
     .project {
